--- a/srcs/.env
+++ b/srcs/.env
@@ -1,3 +1,6 @@
+USER=akaraca
+### SSH bağlantısı root ile sağlandığı zaman, makinede bulunan diğer kullanıcı adına erişemiyoruz, bundan dolayı elle ekleme işlemini gerçekleştiriyoruz. ###
+
 DOMAIN_NAME=akaraca.42.fr
 ### Web sitesinin erişim adresini belirlemek için kullanılıyor. ###
 
