--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,14 +10,14 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: $HOME/data/wordpress
+      device: /home/${USER}/data/wordpress
 
   db_data:
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: $HOME/data/mariadb
+      device: /home/${USER}/data/mariadb
 
 services:
   mariadb:
