--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,7 +1,8 @@
 server {
 	listen 443 ssl;
 	listen [::]:443 ssl;
-	server_name akaraca.42.fr;
+	server_name $DOMAIN_NAME;
+	# server_name akaraca.42.fr;
 
 	ssl_certificate  /etc/ssl/certs/nginx.crt;
 	ssl_certificate_key /etc/ssl/private/nginx.key;
