--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -53,6 +53,8 @@ services:
     build:
       context: ./requirements/nginx/
       dockerfile: Dockerfile
+    env_file:
+      - ./.env
     volumes:
       - wp_data:/var/www/html
     networks:
